--- a/src/pages/App/App.css
+++ b/src/pages/App/App.css
@@ -36,3 +36,12 @@
     transform: rotate(360deg);
   }
 }
+
+main {
+  padding-top: 60px;
+}
+@media (max-width: 979px) {
+  body {
+    padding-top: 0px;
+  }
+}
