--- a/src/index.css
+++ b/src/index.css
@@ -148,7 +148,6 @@ body {
   sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
-  background-color: var(--tan-4);
-  padding: 2vmin;
+  background-color: powderblue;
   height: 100vh;
 }
