--- a/src/components/Deck/Deck.css
+++ b/src/components/Deck/Deck.css
@@ -1,17 +1,3 @@
-.disable-select {
-    -webkit-user-select: none;  
-    -moz-user-select: none;    
-    -ms-user-select: none;      
-    user-select: none;
-  }
-
-.delete-deck {
-    width: auto;
-    height:0;
-    text-align:end;
-    transform: translate(-5px,-3px);
-}
-
 .deck-buttons {
     display:grid;
     justify-content: space-around;
@@ -51,4 +37,5 @@
 .card {
     border: none;
     border-radius: 0;
+    transition: all 1s ease-in-out;
 }
