hopefully fix -reboot!

--- a/src/components/Deck/Deck.css
+++ b/src/components/Deck/Deck.css
@@ -34,7 +34,7 @@
     border-bottom: 0;
 }
 
-.card {
+#card-attributes {
     border: none;
     border-radius: 0;
     transition: all 1s ease-in-out;
