--- a/src/pages/App/App.css
+++ b/src/pages/App/App.css
@@ -1,25 +1,27 @@
 body {
-  margin: 0;
+  margin: auto 0;
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
   'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
   sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
-  background-color: #0b032d;
-  height: 100vh;
 }
 .App {
   text-align: center;
+  background-color: #0b032d;
+  min-height: 100vh;
+  margin: auto 0;
 }
 
 .container-main {
-  background: #f67e7d;
+  background: rgb(246,184,125);
+  background: linear-gradient(180deg, rgba(246,184,125,1) 0%, rgba(246,126,125,0.9) 49%, rgba(246,125,125,1) 100%);
   width: 80%;
-  min-height: 100vh;
   justify-self: center;
   margin: auto;
   box-shadow: 0px 0px 10px 5px rgba(255, 255, 255, 0.159) ;
   padding: 1rem;
+  min-height: 100vmin
 }
 
 .container {
@@ -158,6 +160,11 @@ body {
   transform: translate(2rem,5px);
 }
 
+.card-head {
+  padding: .75rem 1.25rem;
+  margin-bottom: 0
+}
+
 label {
   margin-bottom:0;
   width: -webkit-fill-available;
@@ -201,26 +208,26 @@ textarea:last-child {
 }
 
 .txt-right {
-  float:right !important;
+  float:right;
 }
 
 .page-footer {
-  padding-top: 0px;
-  margin-bottom: 0;
-  text-align: right;
+  position: relative;
+  bottom: 0;
   width: 100%;
+  text-align: end;
+  padding: 10px;
 }
 
-button {
+#add-deck-button {
   margin:1rem;
   border:none;
   transition: all .3s;
   border: 2px solid transparent;
-
 }
 
-button:hover {
-  background: #0b032d;
+#add-deck-button:hover {
+  background: #cd5e5e;
   color: azure;
   border:2px solid azure
 }
