--- a/src/pages/AuthPage/AuthPage.css
+++ b/src/pages/AuthPage/AuthPage.css
@@ -62,20 +62,20 @@
     border-radius: 1vmin;
   }
 
-form {
+.form-auth {
     display: grid;
     grid-template-columns: 1fr 3fr;
     gap: 1.25vmin;
     color: var(--text-light);
   }
 
-label {
+.label-auth {
     font-size: 2vmin;
     display: flex;
     align-items: center;
   }
   
-  input {
+  .input-auth {
     padding: 1vmin;
     font-size: 2vmin;
     border: .1vmin solid var(--tan-3);
@@ -85,7 +85,7 @@ label {
     outline: none;
   }
 
-  button[type="submit"] {
+  .button-auth[type="submit"] {
     grid-column: span 2;
     margin: 1vmin 0 0;
     border-radius: 5px;
