--- a/src/components/CardFlip/CardFlip.css
+++ b/src/components/CardFlip/CardFlip.css
@@ -2,7 +2,7 @@
     background-color: transparent;
     width: 300px;
     height: 200px;
-    border: 5px solid #fffbfb;
+    /* border: 5px solid #fffbfb; */
     border-radius: 3px;
     perspective: 1000px;
   }
@@ -12,8 +12,19 @@
     height: 100%;
     width: 100%;
     text-align: center;
-    transition: transform 0.5s ease-out;
+    transition: transform 0.4s ease-out;
     transform-style:preserve-3d;
+  }
+
+  .flex-ctr-ctr {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    height: 100%
+  }
+
+  .align-ctr {
+    justify-content: center;
   }
   
   .flip-card:hover .flip-card-inner {
@@ -30,10 +41,10 @@
   }
   
   .flip-card-front {
-    background-color: rgb(214, 252, 204);
+    background-color: rgb(255, 253, 253);
     color: black;
     border-radius: 3px;
-    overflow: scroll;
+    /* overflow: scroll; */
   }
   
   .flip-card-back {
@@ -41,7 +52,7 @@
     color: black;
     transform: rotateY(180deg);
     border-radius: 3px;
-    overflow: scroll;
+    /* overflow: scroll; */
   }
 
   .card-index{
