--- a/src/pages/App/App.css
+++ b/src/pages/App/App.css
@@ -82,6 +82,19 @@ body {
   color:azure;
 }
 
+.butt {
+  border: none;
+  border-radius: 5px;
+  margin: 1rem;
+}
+
+#butt-grid {
+  display: grid;
+  margin: 10px auto;
+  grid-template-columns: 1fr 1fr;
+  width: auto;
+}
+
 .big-txt {
   font-size: 2.7rem;
 }
