--- a/src/pages/App/App.css
+++ b/src/pages/App/App.css
@@ -5,16 +5,17 @@ body {
   sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+  background-color: rgba(11,3,45,1);
 }
 .App {
   text-align: center;
-  /* background-color: rgba(11,3,45,1) ; */
+  background-color: rgba(11,3,45,1);
   min-height: 100vh;
   margin: auto 0;
   transition: all 4s;
 }
 
-  /* Thank you gradient-animator.com */
+  Thank you gradient-animator.com
 #background {
     background: linear-gradient(225deg, #e87373, #621940, #5f2946);
     background-size: 600% 600%;
@@ -24,7 +25,7 @@ body {
     animation: AnimationName 18s ease infinite;
 }
 
-@-webkit-keyframes AnimationName {
+/* @-webkit-keyframes AnimationName {
     0%{background-position:0% 2%}
     50%{background-position:100% 99%}
     100%{background-position:0% 2%}
@@ -38,14 +39,14 @@ body {
     0%{background-position:0% 2%}
     50%{background-position:100% 99%}
     100%{background-position:0% 2%}
-}
+} */
 
 
 
 .container-main {
   background: rgb(246,184,125);
   background: linear-gradient(180deg, rgba(246,184,125,1) 0%, rgba(246,126,125,0.9) 49%, rgba(246,125,125,1) 100%);
-  width: 80%;
+  width: 85%;
   justify-self: center;
   margin: auto;
   box-shadow: 0px 0px 10px 5px rgba(255, 255, 255, 0.159) ;
@@ -59,6 +60,7 @@ body {
   border-radius: 5px;
   box-shadow: 0px 0px 10px 5px rgba(45, 42, 42, 0.159) ;
 }
+
 
 .bdr-radius {
   border-radius: 5px;
@@ -125,19 +127,19 @@ body {
 }
 
 .big-txt {
-  font-size: 2.7rem;
+  font-size: 2.4rem;
 }
 
 .md-txt-3 {
-  font-size: 1.8rem;
+  font-size: 1.6rem;
 }
 
 .md-txt-2 {
-  font-size: 1.5rem;
+  font-size: 1.4rem;
 }
 
 .md-txt-1 {
-  font-size: 1.2rem;
+  font-size: 1.1rem;
 }
 
 .sm-txt {
@@ -194,12 +196,22 @@ body {
   margin-left: .9rem;
 }
 
+.card-container {
+  margin: 3rem auto;
+  border-radius: 5px;
+  box-shadow: 0px 0px 10px 5px rgba(45, 42, 42, 0.159) ;
+}
+
 .card-number {
   display:block;
   width: auto;
   height:0;
   text-align:start;
   transform: translate(2rem,5px);
+}
+
+.flx {
+  display:flex;
 }
 
 .card-head {
@@ -216,13 +228,35 @@ textarea {
   resize: none;
 }
 
+.card-grid {
+  display: grid;
+  padding: 5vmin;
+  grid-template-columns: repeat(auto-fill, minmax(270px, 1fr));
+  grid-template-rows: inherit;
+  grid-row-gap: 5vmin;
+  border-top: 1px solid black;
+}
+
+#cardview-grid {
+  display: grid;
+  padding: 5vmin;
+  grid-template-columns: repeat(auto-fill, minmax(270px, 1fr));
+  grid-template-rows: inherit;
+  grid-row-gap: 5vmin;
+  border-top: 1px solid black;
+}
+
 textarea:first-child {
   padding: 1.3rem;
   margin-right: .6rem;
+  background: azure;
+  border:none;
 }
 textarea:last-child {
   padding: 1.3rem;
   margin-left: .6rem;
+  background: azure;
+  border:none;
 }
 
 .disable-select {
@@ -297,4 +331,101 @@ textarea:last-child {
   30% {opacity: 1;}
   90% {opacity: 1;}
   100% {opacity: 0;}
+}
+
+
+
+
+.flip-card {
+  background-color: transparent;
+  /* width: 300px; */
+  /* height: 200px; */
+  /* border: 5px solid #fffbfb; */
+  border-radius: 3px;
+  perspective: 1000px;
+}
+
+.flip-card-inner {
+  position: relative;
+  height: 100%;
+  width: 100%;
+  text-align: center;
+}
+
+.flex-ctr-ctr-cards {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  height: 100%;
+  margin:auto 1rem;
+  flex-wrap: wrap;
+}
+
+.align-ctr {
+  justify-content: center;
+}
+
+.cards-front, .cards-back {
+  position: absolute;
+  width: 100%;
+  height: 100%;
+  background: rgb(255, 253, 253);
+  color: black;
+  border-radius: 3px;
+}
+
+
+.card-front {
+  margin: 2rem;
+}
+
+.card-back {
+  margin: 2rem;
+}
+
+.card-index{
+height: 0;
+text-align: right;
+margin-right: 5px;
+}
+
+.card-content {
+  padding:35px;
+}
+
+.card-front {
+  width: 300px;
+  height: 200px;
+  border-radius: 3px;
+}
+
+.card-back {
+  width: 300px;
+  height: 200px;
+  border-radius: 3px;
+  perspective: 1000px;
+}
+
+.card-inner {
+  position: relative;
+  height: 100%;
+  width: 100%;
+  text-align: center;
+  transition: transform 0.4s ease-out;
+  transform-style:preserve-3d;
+}
+
+.flex-ctr-ctr {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  height: 100%
+}
+
+.align-ctr {
+  justify-content: center;
+}
+
+.flip-card:hover .flip-card-inner {
+  transform: rotateY(-180deg) 
 }
