styling, create quote component

--- a/src/pages/App/App.css
+++ b/src/pages/App/App.css
@@ -15,15 +15,15 @@ body {
   transition: all 4s;
 }
 
-  Thank you gradient-animator.com
-#background {
+  /* Thank you gradient-animator.com */
+/* #background {
     background: linear-gradient(225deg, #e87373, #621940, #5f2946);
     background-size: 600% 600%;
 
     -webkit-animation: AnimationName 18s ease infinite;
     -moz-animation: AnimationName 18s ease infinite;
     animation: AnimationName 18s ease infinite;
-}
+} */
 
 /* @-webkit-keyframes AnimationName {
     0%{background-position:0% 2%}
@@ -296,8 +296,11 @@ textarea:last-child {
 }
 
 #add-deck-button {
+  position: relative;
   margin:1rem;
+  height: 3rem;
   border:none;
+  width:90%;
   transition: all .3s;
   border: 2px solid transparent;
 }
@@ -314,22 +317,28 @@ textarea:last-child {
 }
 
 .quote-container {
-  height:3rem
+  position: relative;
+  height:3rem;
+  margin:1rem;
 }
 
 .quote-container > * {
   padding-left: 6rem;
   margin: 0;
   text-align: left;
-  -webkit-animation: fadeQuote 9.5s  infinite;
-  -moz-animation: fadeQuote 9.5s  infinite;
-  animation: fadeQuote 9.5s  infinite;
+
+}
+
+.quote-anim > * {
+  -webkit-animation: fadeQuote 7s;
+  -moz-animation: fadeQuote 7s;
+  animation: fadeQuote 7s;
 }
 
 @keyframes fadeQuote {
   0% {opacity: 0;}
-  30% {opacity: 1;}
-  90% {opacity: 1;}
+  20% {opacity: 1;}
+  70% {opacity: 1;}
   100% {opacity: 0;}
 }
 
