--- a/src/pages/App/App.css
+++ b/src/pages/App/App.css
@@ -52,7 +52,7 @@ body {
   box-shadow: 0px 0px 10px 5px rgba(255, 255, 255, 0.159) ;
   padding: 2rem;
   padding-bottom: 5rem;
-  min-height: 100vmin
+  min-height: 90vmin
 }
 
 .container {
@@ -222,6 +222,12 @@ body {
 
 .flx {
   display:flex;
+}
+.flx-ctr-down {
+  display:flex;
+  flex-direction: column;
+  justify-content: center;
+  height: 100%;
 }
 
 .card-head {
