--- a/src/pages/App/App.css
+++ b/src/pages/App/App.css
@@ -15,6 +15,10 @@ body {
   transition: all 4s;
 }
 
+*:focus {
+  outline:none;
+}
+
   /* Thank you gradient-animator.com */
 /* #background {
     background: linear-gradient(225deg, #e87373, #621940, #5f2946);
@@ -267,7 +271,11 @@ label {
 }
 
 textarea {
+  border-radius: 10px;
   resize: none;
+  padding: 1.7rem;
+  padding-top: 4.5rem;
+  height: 12rem;
 }
 
 .card-grid {
@@ -289,13 +297,12 @@ textarea {
 }
 
 textarea:first-child {
-  padding: 1.3rem;
   margin-right: .6rem;
   background: azure;
   border:none;
 }
+
 textarea:last-child {
-  padding: 1.3rem;
   margin-left: .6rem;
   background: azure;
   border:none;
