--- a/src/pages/AuthPage/AuthPage.css
+++ b/src/pages/AuthPage/AuthPage.css
@@ -1,105 +1,100 @@
 .auth-grid {
-    display: flex;
-    min-height: 100vh;
-    justify-content: space-evenly;
-    /* max-width: 75%; */
-    /* margin: auto; */
+  display: flex;
+  min-height: 100vh;
+  justify-content: space-evenly;
+  /* max-width: 75%; */
+  /* margin: auto; */
 }
 
 .auth-grid > div {
-    padding: 0;
+  padding: 0;
 }
 
 .auth-title {
-    grid-row: 2;
-    grid-column: 2;
-    align-self: center;
+  grid-row: 2;
+  grid-column: 2;
+  align-self: center;
 }
 
 .auth-description {
-    grid-row: 3;
-    grid-column: 2;
+  grid-row: 3;
+  grid-column: 2;
 }
 
 .auth-registration {
-    grid-row: 2;
-    grid-column: 4;
-    grid-area: span;
-    align-self: center;
+  grid-row: 2;
+  grid-column: 4;
+  grid-area: span;
+  align-self: center;
 }
-
-.auth-reg-grid {
-
-}
-
 
 .auth-pad {
-    transform: scale(1.3);
+  transform: scale(1.3);
 }
 
 .ctr-line {
-    grid-column: 3;
-    grid-row-start: 1;
-    grid-row-end: 4;
-    width:2px;
-    justify-self: center;
+  grid-column: 3;
+  grid-row-start: 1;
+  grid-row-end: 4;
+  width: 2px;
+  justify-self: center;
 }
 
 .no-padding {
-    padding:0;
+  padding: 0;
 }
 
 .align-center {
-    grid-row:3;
-    grid-column: 4;
-    margin-top: 1rem;
+  grid-row: 3;
+  grid-column: 4;
+  margin-top: 1rem;
 }
 
 .form-container {
-    padding: 3vmin;
-    background-color: var(--tan-1);
-    border: .1vmin solid var(--tan-3);
-    border-radius: 1vmin;
+  padding: 3vmin;
+  background-color: var(--tan-1);
+  border: 0.1vmin solid var(--tan-3);
+  border-radius: 1vmin;
 }
 
 .form-auth {
-    display: grid;
-    grid-template-columns: 1fr 3fr;
-    gap: 1.25vmin;
-    color: var(--text-light);
+  display: grid;
+  grid-template-columns: 1fr 3fr;
+  gap: 1.25vmin;
+  color: var(--text-light);
 }
 
 .label-auth {
-    font-size: 2vmin;
-    display: flex;
-    align-items: center;
+  font-size: 2vmin;
+  display: flex;
+  align-items: center;
 }
 
 .input-auth {
-    padding: 1vmin;
-    font-size: 2vmin;
-    border-radius: .5vmin;
-    border: .1vmin solid white;
-    color: var(--text-dark);
-    background-image: none !important;
-    outline: none;
+  padding: 1vmin;
+  font-size: 2vmin;
+  border-radius: 0.5vmin;
+  border: 0.1vmin solid white;
+  color: var(--text-dark);
+  background-image: none !important;
+  outline: none;
 }
 
 .button-auth[type="submit"] {
-    grid-column: span 2;
-    margin: 1vmin 0 0;
-    border-radius: 5px;
-    border: none;
+  grid-column: span 2;
+  margin: 1vmin 0 0;
+  border-radius: 5px;
+  border: none;
 }
 
 .auth-form-switch {
-    border:none;
-    border-radius: 5px;
-    margin: 1rem;
-    margin-top:0px;
+  border: none;
+  border-radius: 5px;
+  margin: 1rem;
+  margin-top: 0px;
 }
 
 .flex-down {
-    display: flex;
-    flex-direction: column;
+  display: flex;
+  flex-direction: column;
 }
