--- a/src/components/Deck/Deck.css
+++ b/src/components/Deck/Deck.css
@@ -43,4 +43,24 @@
   border: none;
   border-radius: 0;
   transition: all 1s ease-in-out;
+  max-width: 17rem;
+  justify-self: center;
+}
+
+@media only screen and (max-width:700px) {
+
+  .deck-buttons {
+    display: flex;
+    flex-direction: column;
+    position: relative;
+    height: auto;
+  }
+
+  .deck-buttons > a {
+    font-size: small;
+    padding: 1rem;
+    align-content: none;
+    /* height: 0; */
+  }
+
 }
