--- a/src/components/DecksListContainer/DecksListContainer.css
+++ b/src/components/DecksListContainer/DecksListContainer.css
@@ -5,4 +5,14 @@
   grid-template-rows: inherit;
   grid-row-gap: 5vmin;
   border-top: 1px solid black;
+  justify-content: center;
+}
+
+@media only screen and (max-width: 700px ) {
+  
+  .card-grid {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+  }
 }
