--- a/src/pages/NewDeckPage/NewDeckPage.css
+++ b/src/pages/NewDeckPage/NewDeckPage.css
@@ -1,22 +1,90 @@
+.deck-container {
+    display: grid;
+    grid-template-columns: 1fr 1fr;
+    grid-template-rows: 1fr 5fr;
+    padding:1.2rem;
+}
+
+.deck-container > input,textarea {
+    padding-left: 0;
+    padding:5rem;
+
+}
+
 @media only screen and (max-width: 1000px ) {
 
-    #mobile-tagarea-size {
+    /* Overrides */
+
+    .container-main {
+        width: 100%;
+        height:100%;
+        min-height:100vh;
+        padding: 0;
+    }
+
+    .container {
+        min-width: 100%;
+        padding-bottom: 40px;
+        margin: 0;
+        
+    }
+
+    textarea {
+        padding:3rem;
+        padding-top: 3.9rem;
+        height: auto;
+        font-size: medium;
+        border: none;
+    }
+
+    #mobile-header-size {
         font-size:1rem;
     }
 
-    #mobile-name-tag {
+    #mobile-front-tag {
         font-size: 18px;
     }
-    #mobile-name {
+    #mobile-front {
         font-size: 16px;
         overflow-wrap: anywhere
     }
-    #mobile-description-tag {
+    #mobile-back-tag {
         font-size: 17px;
     }
-    #mobile-description {
+    #mobile-back {
         font-size: 15px;
-        overflow-wrap: anywhere
+        overflow-wrap: anywhere;
     }
 
+    #mobile-deck-container {
+        display: grid;
+        grid-template-columns: 1fr;
+        grid-template-rows: 1fr 5fr 1fr 6fr;
+    }
+
+    #name-label {
+        grid-row: 1;
+        align-self: center;
+        width: 100%;
+        text-align: center;
+    }
+    #back-label {
+        grid-row: 3;
+        align-self: center;
+        width: 100%;
+        text-align: center;
+    }
+    #front-textarea {
+        grid-row: 2;
+        width: 90%;
+        margin: auto;
+
+    }
+    #back-textarea {
+        grid-row: 4;
+        width: 90%;
+        margin:auto;
+    }
+
+    
 }
