--- a/src/components/Deck/Deck.css
+++ b/src/components/Deck/Deck.css
@@ -10,6 +10,12 @@
   padding: 1rem;
 }
 
+#butt-grid {
+  display: grid;
+  grid-template-columns: 1fr 1fr;
+  width: auto;
+}
+
 .two-buts {
   grid-template-columns: 1fr 1fr;
 }
@@ -39,6 +45,14 @@
   border-bottom: 0;
 }
 
+#newcard-attributes {
+  border: none;
+  border-radius: 0;
+  transition: all 1s ease-in-out;
+  width: 17rem;
+  justify-self: center;
+}
+
 #card-attributes {
   border: none;
   border-radius: 0;
@@ -49,6 +63,14 @@
 
 @media only screen and (max-width:700px) {
 
+  #newcard-attributes {
+    border: none;
+    border-radius: 0;
+    transition: all 1s ease-in-out;
+    width: 17rem;
+    justify-self: center;
+  }
+
   .deck-buttons {
     display: flex;
     flex-direction: column;
@@ -57,7 +79,6 @@
   }
 
   .deck-buttons > a {
-    font-size: small;
     padding: 1rem;
     align-content: none;
     /* height: 0; */
