--- a/src/pages/NewDeckPage/NewDeckPage.css
+++ b/src/pages/NewDeckPage/NewDeckPage.css
@@ -1,9 +1,16 @@
 .deck-container {
     display: grid;
     grid-template-columns: 1fr 1fr;
-    grid-template-rows: 1fr 5fr;
+    grid-template-rows: 1fr 6fr 1fr;
     padding:1.2rem;
 }
+
+.newcard-container {
+    display: grid;
+    grid-template-columns: 1fr 1fr;
+    grid-template-rows: .5fr 3fr .5fr 1fr .5fr;
+}
+
 
 .deck-container > input,textarea {
     padding-left: 0;
@@ -11,7 +18,64 @@
 
 }
 
-@media only screen and (max-width: 1000px ) {
+
+.newcard-container > input,textarea {
+    padding-left: 0;
+    padding:5rem;
+}
+
+
+#tab-info {
+    text-align: center;
+    grid-area: 4 / 1 / 4 / 3;
+    margin: 2rem auto;
+
+    cursor: pointer;
+    transition: all .1s;
+}
+
+#tab-info:hover {
+    transition: all .1s;
+    transform: scale(1.15);
+}
+
+#add-deck-button {
+    position: relative;
+    margin: 1rem;
+    height: 3rem;
+    border: none;
+    cursor: pointer;
+    width: 75%;
+    transition: all 0.3s;
+    border: 2px solid transparent;
+  }
+  
+  #add-deck-button:hover {
+    transition: all .1s;
+    transform: scale(1.0);
+  }
+
+  #tab-info {
+    border-style: none;
+    cursor: pointer;
+    width: 60%;
+    text-align: center;
+    grid-area: 4 / 1 / 4 / 3;
+    margin: auto;
+    height: 3rem;
+    box-shadow: 0px 0px 6px 1px #cd5e5e54
+}
+
+textarea {
+    margin: auto .5rem;
+    border: none;
+}
+
+.header-size {
+    padding: 20px;
+}
+
+@media only screen and (max-width: 1025px ) {
 
     /* Overrides */
 
@@ -19,7 +83,7 @@
         width: 100%;
         height:100%;
         min-height:100vh;
-        padding: 0;
+        padding: 0 0 2rem 0;
     }
 
     .container {
@@ -37,32 +101,37 @@
         border: none;
     }
 
-    #mobile-header-size {
-        font-size:1rem;
+    .header-size {
+        padding:10px;
     }
 
     #mobile-front-tag {
-        font-size: 18px;
+        font-size: 1.3rem;
     }
     #mobile-front {
-        font-size: 16px;
         overflow-wrap: anywhere
     }
     #mobile-back-tag {
-        font-size: 17px;
+        font-size: 1.2rem;
     }
     #mobile-back {
-        font-size: 15px;
+        font-size: 1.5rem;
         overflow-wrap: anywhere;
     }
 
     #mobile-deck-container {
         display: grid;
         grid-template-columns: 1fr;
-        grid-template-rows: 1fr 5fr 1fr 6fr;
+        grid-template-rows: 1fr 3.5fr 1fr 3.5fr 1fr;
     }
 
-    #name-label {
+    #mobile-card-container {
+        display: grid;
+        grid-template-columns: 1fr;
+        grid-template-rows: 1fr 3fr 1fr 3fr .5fr 1fr .5fr;
+    }
+
+    #front-label {
         grid-row: 1;
         align-self: center;
         width: 100%;
@@ -86,5 +155,14 @@
         margin:auto;
     }
 
+        
+    #tab-info {
+        width: 60%;
+        text-align: center;
+        grid-area: 6 / 1 / 6 / 1;
+        margin: auto;
+        height: 3rem;
+        box-shadow: 0px 0px 6px 1px #cd5e5e54
+    }
     
 }
