--- a/src/components/DecksListContainer/DecksListContainer.css
+++ b/src/components/DecksListContainer/DecksListContainer.css
@@ -8,6 +8,16 @@
   justify-content: center;
 }
 
+.link-hover {
+  transition: all .2s;
+  transform: scale(1);
+}
+
+.link-hover:hover {
+  transition: all .2s;
+  transform: scale(1.15);
+}
+
 @media only screen and (max-width: 700px ) {
   
   .card-grid {
