--- a/src/components/CardFlip/CardFlip.css
+++ b/src/components/CardFlip/CardFlip.css
@@ -64,8 +64,9 @@
 
   .card-content {
     display:flex;
-    width: 100%;
+    padding: 15px;
     position: relative;
+    width: 100%;
     height: 100%;
     align-items: start;
     overflow: auto;
@@ -83,3 +84,6 @@
   }
 
 
+@media only screen and (max-width: 700px) {
+
+}
